--- a/public/stylesheets/homepage.css
+++ b/public/stylesheets/homepage.css
@@ -55,7 +55,73 @@
   background-color: skyblue;
   padding: 5rem;
 } */
+.home {
+  position: relative;
+  height: 100vh;
+  width: 100%;
+  display: flex;
+}
+.homeLeft {
+  position: relative;
+  width: 30%;
+  height: 100%;
+  /* background-color: rosybrown; */
+}
 
+.homeRight {
+  width: 70%;
+  height: 100%;
+  /* background-color: rgb(213, 216, 226); */
+}
+.blob1 {
+  position: absolute;
+  top: 1%;
+  /* left: 7px; */
+  width: 63%;
+  height: 86vh;
+
+}
+.blob2 {
+  position: absolute;
+  right: 0%;
+  top: 0%;
+  right: 3%;
+  top: 0%;
+}
+.blob3 {
+  position: absolute;
+  right: 0%;
+  top: 0%;
+  right: 5%;
+  top: 50%;
+  transform: scale(1.05);
+}
+.sliderRev {
+  margin-top: 1rem;
+  background-color: #2B72E4;
+  height: 70%;
+  width: 100%;
+  margin-left: auto;
+  /* margin-right: auto; */
+  border-radius: 20px;
+  position: relative;
+}
+.scroll {
+  position: relative;
+  background-color: #2B72E4;
+  width: 100%;
+  margin-left: auto;
+  height: 9vh;
+  border-radius: 20px;
+  margin-top: 1.5rem;
+}
+.slide {
+  position: relative;
+  width: 100vw;
+  height: 100vh;
+  top: 1%;
+  right: 1%;
+}
 .swiper-wrapper {
   position: relative;
   width: 100vw;
@@ -63,7 +129,15 @@
   top: 1%;
   right: 1%;
 }
+.section-1 {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
+}
 .swipersection {
   position: relative;
   width: 100%;
@@ -143,7 +217,7 @@
   justify-content: center;
   align-items: center;
   padding: 0 5rem;
-  background: url("../images/home/TopAir.png") center;
+  /* background: url("../images/home/TopAir.png") center; */
   background-size: 170%;
 }
 .hexa1 {
