--- a/views/contactus.ejs
+++ b/views/contactus.ejs
@@ -67,7 +67,7 @@
 				</div>
 				<div class="right">
 					<h1>Enquiry Form</h1>
-					<form action="mailto:info@classicneetacademy.com" method="POST">
+					<form action="mailto:info@classicneetacademy.com"  method="POST">
 						<div class="input-container">
 							<label for="name">Name</label>
 							<input
@@ -83,7 +83,7 @@
 							<input
 								type="text"
 								name="phone"
-								class="form-input"
+								class="form-input phonenum"
 								id="phone"
 								required
 							/>
