--- a/views/home.ejs
+++ b/views/home.ejs
@@ -9,7 +9,6 @@
 	<link rel="stylesheet" href="stylesheets/homepage.css" />
 	<link rel="stylesheet" href="stylesheets/common.css" />
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF" crossorigin="anonymous">
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF" crossorigin="anonymous">
 	<title>ClassicNeetAcademy</title>
 </head>
 
@@ -42,17 +41,20 @@
 				</div>
 				<div class="homeRight">
 					<div class="sliderRev">
-						<div id="carouselExampleControls" class="carousel slide p-absolute" data-bs-ride="carousel">
+						<div id="carouselExampleControls" class="carousel" data-bs-ride="carousel">
 						<div class="carousel-inner">
 						  <div class="carousel-item active">
-							<img src="images/home/carousel/1.jpg" class="d-block w-100" alt="...">
-						  </div>
-						  <!-- <div class="carousel-item">
-							<img src="..." class="d-block w-100" alt="...">
+							<img src="images/home/carousel/1.jpg" class="d-block w-100 h-100" alt="...">
 						  </div>
 						  <div class="carousel-item">
-							<img src="..." class="d-block w-100" alt="...">
-						  </div> -->
+							<img src="images/home/carousel/2.jpg" class="d-block w-100 h-100" alt="...">
+						  </div>
+						  <div class="carousel-item">
+							<img src="images/home/carousel/3.jpg" class="d-block w-100 h-100" alt="...">
+						  </div>
+						  <div class="carousel-item">
+							<img src="images/home/carousel/4.jpg" class="d-block w-100 h-100" alt="...">
+						  </div>
 						</div>
 						<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
 						  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
