--- a/views/home.ejs
+++ b/views/home.ejs
@@ -41,7 +41,7 @@
 					
 				</div>
 				<div class="homeRight">
-					<div class="sliderRev">
+					<!-- <div class="sliderRev">
 						<div id="carouselExampleControls" class="carousel slide p-absolute" data-bs-ride="carousel">
 						<div class="carousel-inner">
 						  <div class="carousel-item active">
@@ -52,7 +52,7 @@
 						  </div>
 						  <div class="carousel-item">
 							<img src="..." class="d-block w-100" alt="...">
-						  </div> -->
+						  </div> 
 						</div>
 						<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
 						  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -63,7 +63,7 @@
 						  <span class="visually-hidden">Next</span>
 						</button>
 					  </div>
-					</div>
+					</div> -->
 					<div class="scroll"><marquee class="marqueetext" vspace="30%" onmousedown="stop();"
 						onmouseup="start();">
 							<p> Admission Open ! <a href="./index.html">JOIN NOW </a> &nbsp; &ensp; Admission Open ! <a
@@ -196,7 +196,7 @@
 		</div>
 	</section>
 
-	<section class="neet-toppers">
+	<!-- <section class="neet-toppers">
 		<h1>Our Toppers</h1>
 		<div class="topper-card-container">
 			<div class="topper-card">
@@ -215,6 +215,26 @@
 					<p>644/720</p>
 				</div>
 			</div>
+	</section> -->
+	<section class="topperCard">
+		<div class="topper1">
+			<div class="topperImg"><img src="images\home\SREYA PRIYADHARSHINI G.jpg" alt=""></div>
+			<div class="topperContent">
+				<p class="name">asdda</p>
+				<p>sadads</p>
+				<p>sadada</p>
+			</div>
+		</div>
+		<div class="topper2">
+			<div class="topperImg"><img src="images\home\SREYA PRIYADHARSHINI G.jpg" alt=""></div>
+			<div class="topperContent">
+				<p class="name">asdda</p>
+				<p>sadads</p>
+				<p>sadada</p>
+			</div>
+
+		</div>
+
 	</section>
 	<div class="neet-2020-toppers">
 		<img src="images/home/Vector.svg" alt="SVG">
