--- a/views/home.ejs
+++ b/views/home.ejs
@@ -166,14 +166,14 @@
 			<div class="box2">
 					<img class="hexaimg" src="images/home/hexa2.png" alt="">
 					<div class="imgContent">
-						<h3 class="imgHeader">NEET</h3>
+						<h3 class="imgHeader">IIT & Medical<br>Foundation</h3>
 						<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor, temporibus.</p>
 					</div>
 			</div>
 			<div class="box3">
 					<img class="hexaimg" src="images/home/hexa3.png" alt="">
 					<div class="imgContent">
-						<h3 class="imgHeader">NEET</h3>
+						<h3 class="imgHeader">IIT-JEE</h3>
 						<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor, temporibus.</p>
 					</div>
 			</div>
@@ -218,32 +218,33 @@
 				</div>
 			</div>
 	</section> -->
-	<section class="topperCard">
-		<div class="topper1">
-			<div class="topperImg"><img src="images\home\SREYA PRIYADHARSHINI G.jpg" alt=""></div>
-			<div class="topperContent">
-				<p class="name">asdda</p>
-				<p class="score">sadads</p>
-				<p class="mark">sadada</p>
-			</div>
-		</div>
-		<div class="topper2">
-			<div class="topperImg"><img src="images\home\SREYA PRIYADHARSHINI G.jpg" alt=""></div>
-			<div class="topperContent">
-				<p class="name">asdda</p>
-				<p class="score">sadads</p>
-				<p class="mark">sadada</p>
-			</div>
-
-		</div>
-
-	</section>
 	<div class="neet-2020-toppers">
 		<img src="images/home/Vector.svg" alt="SVG">
 		<div class="neet-2020-toppers-a">
 			<a href="/">Our Results - Neet 2020 Toppers</a>
 		</div>
 	</div>
+	<section class="topperCard">
+		<div class="topper1">
+			<div class="topperImg"><img src="images\home\SREYA PRIYADHARSHINI G.jpg" alt=""></div>
+			<div class="topperContent">
+				<p class="name">Sreya PriyaDharshini.G</p>
+				<p class="score">Neet score</p>
+				<p class="marks">644/720</p>
+			</div>
+		</div>
+		<div class="topper2">
+			<div class="topperImg2"><img src="images\home\SHARULATA P.jpg" alt=""></div>
+			<div class="topperContent">
+				<p class="name">Sharulata P</p>
+				<p class="score">Neet score</p>
+				<p class="marks">644/720</p>
+			</div>
+
+		</div>
+
+	</section>
+
 	<section class="stats">
 		<div class="stats-details">
 			<div class="stat1 stat">
