--- a/views/coursesIIT&Medical.ejs
+++ b/views/coursesIIT&Medical.ejs
@@ -26,14 +26,9 @@
   <section class="overview">
     <h2><b>OVERVIEW</b></h2>
     <span class="overviewspan">
-      <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-        Lorem Ipsum is simply dummy text of the printing and typesetting industry.    
-        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-        Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
-        Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
-        Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
-        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+      <p>CLASSIC NEET ACADEMY offers a unique IIT/Medical Foundation programme aimed at students of the 6th, 7th, 8th, 9th and 10th classes.
+
+        This program focuses on strengthening the students conceptual clarity of the fundamentals in Mathematics, Physics, Chemistry, Biology, Logical Reasoning & Communication Skills.
       </p>
     
  
@@ -45,11 +40,11 @@
     <span>
     <h2><b>CONTENT</b></h2>
   </span>
-      <P><b>Module 1: </b>  Lorem Ipsum is simply dummy text of Lorem Ipsum is simply dummy text of the printing and typesetting industry. </P>
-      <P><b>Module 2: </b>  Lorem Ipsum is simply dummy text of Lorem Ipsum is simply dummy text of the printing and typesetting industry. </P>
-      <P><b>Module 3: </b>  Lorem Ipsum is simply dummy text of Lorem Ipsum is simply dummy text of the printing and typesetting industry. </P>
-      <P><b>Module 4: </b>  Lorem Ipsum is simply dummy text of Lorem Ipsum is simply dummy text of the printing and typesetting industry. </P>
-      <P><b>Module 5: </b>  Lorem Ipsum is simply dummy text of Lorem Ipsum is simply dummy text of the printing and typesetting industry. </P>
+      <P><b>1: </b>  To focus on encouraging students to apply the concepts learnt in real life situations. </P>
+      <P><b>2: </b>  Course methodology is aimed at helping the students to understand the concepts thoroughly </P>
+      <P><b>3: </b> It helps them develop a logical approach to Maths, Physics, Chemistry & Biology for an effective learning </P>
+      <P><b>4: </b>  Overall it develops Analytical & Logical skills which are highly required for all competitive exams like NEET, JEE, CLAT, UPSC, etc., </P>
+      <!-- <P><b>Module 5: </b>  Lorem Ipsum is simply dummy text of Lorem Ipsum is simply dummy text of the printing and typesetting industry. </P> -->
 
    
   </section>
