--- a/views/coursesJEE.ejs
+++ b/views/coursesJEE.ejs
@@ -14,7 +14,7 @@
       
     <!-- <img src="../img/courses/neet.jpg" class="neetimage" alt="/"> -->
     <span class="h1andh2">
-      <h1 class="headh1h2"><b>COURSES</b></h1>
+      <h1 class="headh1h2"><b>COURSES</b></h1> 
        <h2 class="headh1h2"><b>IIT-JEE</b></h2>
     </span>
   
@@ -26,15 +26,9 @@
   <section class="overview">
     <h2><b>OVERVIEW</b></h2>
     <span class="overviewspan">
-      <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-        Lorem Ipsum is simply dummy text of the printing and typesetting industry.    
-        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-        Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
-        Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
-        Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
-        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-      </p>
+      <p>This course starts it's journey from the class 11 and will be available till the JEE Main exam. 
+        Around the class 10, the students get involved in the basis of this course and trained accordingly within the JEE Main exam. 
+      </p> 
     
  
       <img src="images/courses/Rectangle 55.png" alt="/">
@@ -43,16 +37,16 @@
   </section>
   <section class="module">
     <span>
-    <h2><b>CONTENT</b></h2>
+    <h2><b>Course Durations</b></h2>
   </span>
-      <P><b>Module 1: </b>  Lorem Ipsum is simply dummy text of Lorem Ipsum is simply dummy text of the printing and typesetting industry. </P>
-      <P><b>Module 2: </b>  Lorem Ipsum is simply dummy text of Lorem Ipsum is simply dummy text of the printing and typesetting industry. </P>
-      <P><b>Module 3: </b>  Lorem Ipsum is simply dummy text of Lorem Ipsum is simply dummy text of the printing and typesetting industry. </P>
-      <P><b>Module 4: </b>  Lorem Ipsum is simply dummy text of Lorem Ipsum is simply dummy text of the printing and typesetting industry. </P>
-      <P><b>Module 5: </b>  Lorem Ipsum is simply dummy text of Lorem Ipsum is simply dummy text of the printing and typesetting industry. </P>
+      <P><b>One-year course </b>  The course is specifically designed for those who wish to focus on JEE after completing their 11th class exams. </P>
+      <P><b>Crash Course: </b>  This course is meant for those who are appearing for their 12th class board exams and wish to focus on JEE after the Board exams. These students will be attempting JEE the same year. </P>
+      <P><b> School Tie up courses </b>  This course will be conducted in school premises for the benefit of students. 12 to 18 hours of classes will be conducted per week. This course not only helps for entrance exams but also for school curriculum. </P>
+      <!-- <P><b>Module 4: </b>  Lorem Ipsum is simply dummy text of Lorem Ipsum is simply dummy text of the printing and typesetting industry. </P>
+      <P><b>Module 5: </b>  Lorem Ipsum is simply dummy text of Lorem Ipsum is simply dummy text of the printing and typesetting industry. </P> -->
 
    
-  </section>
+  <!-- </section> -->
   <section class="drive">
   <div class="bottom-drive">
     <a href="/">Download Free Questions Bank for Neet 2021- Latest edition 2021</a>
