--- a/views/coursesNEET.ejs
+++ b/views/coursesNEET.ejs
@@ -26,14 +26,19 @@
   <section class="overview">
     <h2><b>OVERVIEW</b></h2>
     <span class="overviewspan">
-      <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-        Lorem Ipsum is simply dummy text of the printing and typesetting industry.    
-        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-        Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
-        Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
-        Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
-        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+      <h2><b>Repeaters Course</b></h2>
+      <p>This course is meant for those who have completed 
+         12th class board exams and might have already attempted
+         the NEET. They will appear for NEET in the coming year 
+         after one year of training focused on NEET.
+
+         Course Methodology
+         <ul class="course-methodology">
+           <li>Full day course from Monday to Saturday</li>
+           <li>Classes with proven faculties</li>
+           <li>Daily test, Unit test, Unit Cumulative Test, Revision test, Full length NEET Mock tests</li>
+           <li>Doubt clearing sessions</li>
+         </ul>
       </p>
     
  
@@ -43,17 +48,17 @@
   </section>
   <section class="module">
     <span>
-    <h2><b>CONTENT</b></h2>
+    <h2><b>Course Durations</b></h2>
   </span>
-      <P><b>Module 1: </b>  Lorem Ipsum is simply dummy text of Lorem Ipsum is simply dummy text of the printing and typesetting industry. </P>
-      <P><b>Module 2: </b>  Lorem Ipsum is simply dummy text of Lorem Ipsum is simply dummy text of the printing and typesetting industry. </P>
-      <P><b>Module 3: </b>  Lorem Ipsum is simply dummy text of Lorem Ipsum is simply dummy text of the printing and typesetting industry. </P>
-      <P><b>Module 4: </b>  Lorem Ipsum is simply dummy text of Lorem Ipsum is simply dummy text of the printing and typesetting industry. </P>
-      <P><b>Module 5: </b>  Lorem Ipsum is simply dummy text of Lorem Ipsum is simply dummy text of the printing and typesetting industry. </P>
+      <P><b>Two-Year Course: </b>  This course is meant for students who have completed their 10th std board exams. The course will start at their 11th std and will be conducted till their NEET exam. </P>
+      <P><b>One-year course: </b>  The course is specifically designed for those who wish to focus on NEET after completing their 11th class exams. </P>
+      <P><b>Crash Course: </b>  This course is meant for those who are appearing for their 12th class board exams and wish to focus on NEET after the Board exams. These students will be attempting NEET the same year. </P>
+      <P><b>School Tie up courses: </b>  This course will be conducted in school premises for the benefit of students. 12 to 18 hours of classes will be conducted per week. This course not only helps for entrance exams but also for school curriculum. </P>
+      
 
    
   </section>
-  <section class="drive">
+  <section class="drive"> 
   <div class="bottom-drive">
     <a href="/">Download Free Questions Bank for Neet 2021- Latest edition 2021</a>
   </div>
