--- a/views/coursesIIT&Medical.ejs
+++ b/views/coursesIIT&Medical.ejs
@@ -38,7 +38,7 @@
   </section>
   <section class="module">
     <span>
-    <h2><b>CONTENT</b></h2>
+    <h2><b>Course Duration</b></h2>
   </span>
       <P><b>1: </b>  To focus on encouraging students to apply the concepts learnt in real life situations. </P>
       <P><b>2: </b>  Course methodology is aimed at helping the students to understand the concepts thoroughly </P>
