--- a/views/home.ejs
+++ b/views/home.ejs
@@ -160,21 +160,23 @@
 					<img class="hexaimg" src="images/home/hexa1.png" alt="">
 					<div class="imgContent">
 						<h3 class="imgHeader">NEET</h3>
-						<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor, temporibus.</p>
+						<p>This course is meant for those who have completed 
+							12th class board exams and might have already attempted
+							the NEET.</p>
 					</div>
 			</div>
 			<div class="box2">
 					<img class="hexaimg" src="images/home/hexa2.png" alt="">
 					<div class="imgContent">
 						<h3 class="imgHeader">IIT & Medical<br>Foundation</h3>
-						<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor, temporibus.</p>
+						<p>CLASSIC NEET ACADEMY offers a unique IIT/Medical Foundation programme aimed at students of the 6th, 7th, 8th, 9th and 10th classes.</p>
 					</div>
 			</div>
 			<div class="box3">
 					<img class="hexaimg" src="images/home/hexa3.png" alt="">
 					<div class="imgContent">
 						<h3 class="imgHeader">IIT-JEE</h3>
-						<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor, temporibus.</p>
+						<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor, temporibus.This course starts it's journey from the class 11 and will be available till the JEE Main exam. </p>
 					</div>
 			</div>
 			<!-- <div class="box2">
