--- a/public/stylesheets/coursesIIT&Medical.css
+++ b/public/stylesheets/coursesIIT&Medical.css
@@ -84,6 +84,15 @@
     align-items: center;
 }
 
+.module div {
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    flex-direction: column;
+}
+
 .module h2{
     position: relative;
     padding: 2rem 4rem 2rem 4rem;
