--- a/public/stylesheets/common.css
+++ b/public/stylesheets/common.css
@@ -147,12 +147,13 @@ footer {
 }
 
 .footer_content {
-  position: relative;
+  position: absolute;
   padding: 2% 4% 0 4%;
   width: 100%;
-  height: 100%;
+  height: 75%;
   display: flex;
   flex-direction: column;
+  bottom: 0;
   justify-content: space-between;
 }
 
@@ -181,7 +182,10 @@ footer {
   position: relative;
   display: flex;
   flex-direction: row;
-  margin-top: 10rem;
+  /* margin-top: 10rem; */
+  margin-bottom: -8rem;
+  margin-top: 4rem;
+  margin-bottom: -4rem;
   justify-content: space-around;
 }
 
@@ -194,12 +198,13 @@ footer {
 }
 
 .address-container h1 {
-  text-align: center;
+  text-align: left;
   text-decoration: underline;
 }
 
 .address-container > div {
   display: flex;
+  margin: 0%;
 }
 
 .address-container > div > span > svg {
@@ -228,7 +233,7 @@ footer {
   font-size: 1.3rem;
   font-weight: 600;
   position: relative;
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
   padding: 2rem 0 0 0;
 }
 
@@ -266,4 +271,8 @@ footer {
   .footer_head {
     margin-top: 5%;
   }
+}
+.social {
+  top: 20%;
+  position: absolute;
 }
