--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -88,7 +88,8 @@
                         <% img.forEach(i => { %>
                             <input type="file" id="image" name="sliderimg" required />
                         <% }) %>
-                    </div>
+                    </div>4
+
                     <div class="grid-item1 item3">
                         <p>Updates</p> 
                         <% img.forEach(i => { %>
@@ -144,13 +145,13 @@
                         <input type="file" id="image" name="sliderimg" required />
                         <input type="file" id="image" name="sliderimg" required />
                     </div>
-                    <!-- <div class="grid-item3 item6">
+                    <div class="grid-item3 item6">
                         <p>Update</p>
                         <input type="checkbox" id="checkbox" name="checkbox" required style="height: 20px; width: 20px;" />
                         <input type="checkbox" id="checkbox" name="checkbox" required style="height: 20px; width: 20px;"/>
                         <input type="checkbox" id="checkbox" name="checkbox" required style="height: 20px; width: 20px;"/>
                         <input type="checkbox" id="checkbox" name="checkbox" required style="height: 20px; width: 20px;"/>
-                    </div> -->
+                    </div>
                 </div>
                 <div class="subbutton3">
                     <button type="button">Submit</button>
