--- a/views/home.ejs
+++ b/views/home.ejs
@@ -28,8 +28,8 @@
 				<div class="homeLeft">
 						
 					<img class="building" src="images/home/arch doodle.png" alt="">
-					<!-- <img class="building2" src="images/build2.png" alt=""> -->
-					<!-- <img class="building3" src="images/build3.png" alt=""> -->
+					<img class="building2" src="images/build2.png" alt="">
+					<img class="building3" src="images/build3.png" alt="">
 					<div class="spilldiv">
 						<img class="blob1" src="images/home/spill.png" alt="">
 					</div>
@@ -109,19 +109,19 @@
 					<h1 class="CalanderEvents">Calendar Events</h1>
 					<div class="calenderMain">
 						<div class="calenderCard">
-							<div class="date">01</div><div></div>
+							<div class="date">01</div><div class="calenderContent"><p> NEET 2021 Application</p></div>
 						</div>
 						<div class="calenderCard">
-							<div class="date">02</div><div></div>
+							<div class="date">02</div><div class="calenderContent"><p>NEET 2021 Examination Date</p></div>
 						</div>
 						<div class="calenderCard">
-							<div class="date">03</div><div></div>
+							<div class="date">03</div><div class="calenderContent"><p>NEET 2021 Conselling Date</p></div>
 						</div>
 						<div class="calenderCard">
-							<div class="date">04</div>
+							<div class="date">04</div><div class="calenderContent"><p>NEET 2021 Correction Date</p></div>
 						</div>
 						<div class="calenderCard">
-							<div class="date">05</div>
+							<div class="date">05</div><div class="calenderContent"><p>NEET 2021 Application Form Last Date</p></div>
 						</div>
 					</div>
 				</div>
@@ -159,7 +159,8 @@
 			<div class="box1">
 					<img class="hexaimg" src="images/home/hexa1.png" alt="">
 					<div class="imgContent">
-						<h3 class="imgHeader">NEET</h3>
+						<h3 class="imgHeader">IIT-JEE</h3>
+						
 						<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor, temporibus.</p>
 					</div>
 			</div>
@@ -173,7 +174,7 @@
 			<div class="box3">
 					<img class="hexaimg" src="images/home/hexa3.png" alt="">
 					<div class="imgContent">
-						<h3 class="imgHeader">IIT-JEE</h3>
+						<h3 class="imgHeader">NEET</h3>
 						<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor, temporibus.</p>
 					</div>
 			</div>
@@ -218,6 +219,7 @@
 				</div>
 			</div>
 	</section> -->
+<section class="bgTopper">
 	<div class="neet-2020-toppers">
 		<img src="images/home/Vector.svg" alt="SVG">
 		<div class="neet-2020-toppers-a">
@@ -228,41 +230,46 @@
 		<div class="topper1">
 			<div class="topperImg"><img src="images\home\SREYA PRIYADHARSHINI G.jpg" alt=""></div>
 			<div class="topperContent">
-				<p class="name">Sreya PriyaDharshini.G</p>
-				<p class="score">Neet score</p>
+				<h2 class="name">Sreya PriyaDharshini.G</h2>
+			<div class="markFlex">
+				<h4 class="score">Neet score </h4>
 				<p class="marks">644/720</p>
+			</div>
 			</div>
 		</div>
 		<div class="topper2">
 			<div class="topperImg2"><img src="images\home\SHARULATA P.jpg" alt=""></div>
 			<div class="topperContent">
-				<p class="name">Sharulata P</p>
-				<p class="score">Neet score</p>
+				<h2 class="name">Sharulata P</h2>
+				<div class="markFlex">
+				<h4 class="score">Neet score</h4>
 				<p class="marks">644/720</p>
+			</div>
 			</div>
 
 		</div>
 
 	</section>
+</section>
 
 	<section class="stats">
 		<div class="stats-details">
 			<div class="stat1 stat">
-				<h1>345</h1>
+				<h1 class="counter" data-target='345'>345</h1>
 				<h3>MBBS Seats through Neet</h3>
 			</div>
 			<div class="stat2 stat">
-				<h1>4</h1>
+				<h1 class="counter" data-target='4'>4</h1>
 				<h3>Consecutive years of District first in
 					Salem</h3>
 			</div>
 			<div class="stat3 stat">
-				<h1>90%</h1>
+				<h1 class="counter" data-target='90'>90%</h1>
 				<h3>Success rate in
 					NEET</h3>
 			</div>
 			<div class="stat4 stat">
-				<h1>15</h1>
+				<h1 class="counter" data-target='15'>15</h1>
 				<h3>NIT & IIST
 					Admissions</h3>
 			</div>
