--- a/public/stylesheets/homepage.css
+++ b/public/stylesheets/homepage.css
@@ -10,6 +10,7 @@
 	transition: 0.4s;
 	z-index: 99999;
 	color: #fff;
+	display: none;
 }
 /* Swiper  */
 .swiper {
@@ -95,17 +96,16 @@
 }
 .blob1 {
 	position: absolute;
-	top: 1%;
+	top: 2%;
 	/* left: 7px; */
 	width: 63%;
 	height: 86vh;
 }
 .blob2 {
 	position: absolute;
-	right: 0%;
-	top: 0%;
+	
 	right: 3%;
-	top: 0%;
+	top: 1%;
 }
 .blob3 {
 	position: absolute;
@@ -215,7 +215,7 @@
   display: flex;
   flex-direction: row;
   /* border: 2px solid black; */
-  box-shadow: 5px 5px 20px rgb(4 113 255 / 50%);
+  /* box-shadow: 5px 5px 20px rgb(4 113 255 / 50%); */
   border-radius: 20px;
   padding: 18px;
   background: #2b72e4;
@@ -270,14 +270,29 @@
 	top: 15%;
 	left: 10%;
 }
+.calenderContent {
+	text-align: center;
+	
+	margin-left: auto;
+	margin-right: auto;
+	display: flex;
+	align-items: center;
+}
+.calenderContent p {
+	font-size: 16px;
+	margin-bottom: 0rem !important;
+	font-weight: 600;
+}
 .date {
-	background-color: #2b72e4;
+	background: #2b72e4;
 	color: white;
 	height: 100%;
 	width: 20%;
-	padding: 1.8rem;
+	padding: 1.6rem;
 	border-radius: 20px 0px 20px 0px;
-	font-size: 20px;
+	font-size: 22px;
+  text-align: center;
+  transition: .3s all ease-in-out;
 }
 .backgroundMain {
 	background-color: #f9fbfa;
@@ -293,14 +308,17 @@
 	border-radius: 20px;
 	width: 30rem;
 	margin-top: 1rem;
+	transition: .3s all ease-in-out;
 	/* border: 1px solid #1E2886; */
 }
 .calenderCard:hover {
 	transform: scale(1.1);
 	box-shadow: 2px 2px 60px rgba(4, 113, 255, 0.2);
 }
-/* .calender:hover .date {
-} */
+.calenderCard:hover .date {
+	background:linear-gradient(90deg,#02c3d8,#0061FF);
+	
+}
 
 .calandersvg {
 	top: 10%;
@@ -360,7 +378,7 @@
 	justify-content: flex-start;
 	display: flex;
 	z-index: 5;
-  margin-bottom: 2rem;
+  margin-bottom: 1.5rem;
 	/* box-shadow: 5px 5px 20px rgba(4, 113, 255, 0.5); */
 	/* background-color: #1E2886; */
 	/* padding-left: 6rem; */
@@ -369,6 +387,7 @@
   
     margin-top: 1.5rem;
     margin-right: 10rem;
+    
 
 }
 .section-2 .div-1 .calandersvg {
@@ -376,6 +395,7 @@
 }
 .div-2-title {
 	margin-bottom: 3rem;
+	/* font-size: 20px; */
 	/* border: 1px solid #1E2886; */
 }
 .space {
@@ -471,20 +491,22 @@
   object-fit: cover;
 }
 .building2 {
-	height: 41%;
-	width: 50%;
-	top: 8%;
-	position: absolute;
-	z-index: 5;
-	left: 55%;
+  height: 23%;
+  width: 49%;
+  top: 3%;
+  position: absolute;
+  z-index: 5;
+  left: 52%;
+  opacity: .3;
 }
 .building3 {
-	height: 48%;
+	height: 23%;
 	width: 50%;
-	top: 98%;
+	top: 51%;
 	position: absolute;
 	z-index: 5;
-	left: 54%;
+	left: 51%;
+  opacity: .3;
 }
 .cardsDiv {
 	display: flex;
@@ -530,6 +552,7 @@
 }
 .hexaimg img {
 	box-shadow: 2px 2px 60px rgba(0, 0, 0, 0.9);
+	
 }
 .imgContent {
 	position: absolute;
@@ -685,7 +708,7 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	margin: 8rem 0px;
+	margin: 5rem 0px;
 	position: relative;
 }
 
@@ -696,12 +719,14 @@
 }
 
 .neet-2020-toppers-a {
-	position: absolute;
+	position: relative;
+	margin-top: 3rem;
 	border-radius: 50px;
 	padding: 0.5rem 5rem;
 	border: 1px solid black;
 	font-size: 2rem;
-	background-color: rgba(255, 255, 255, 0.8);
+	background-color: rgba(255, 255, 255, 0.849);
+	box-shadow: 2px 2px 60px rgba(0, 0, 0, 0.2);
 }
 
 .neet-2020-toppers-a a {
@@ -769,7 +794,7 @@
 .testimonials {
 	border: 1px solid black;
 	border-radius: 14px;
-	height: 12rem;
+	height: 15rem;
 	width: 20rem;
 	display: flex;
 	justify-content: space-around;
@@ -1029,11 +1054,11 @@
   /* background-color: slategray; */
   height: 40vh;
   display: flex;
-  width: 80%;
+  width: 90%;
   margin-left: auto;
   margin-right: auto;
   position: relative;
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-items: center;
   margin-top: 5rem;
   
@@ -1045,6 +1070,9 @@
   display: flex;
   box-shadow: 5px 5px 60px rgba(0, 0, 0, 0.2);
   border-radius: 20px;
+  /* background-color: rgba(255, 255, 255, 0.445); */
+  /* background-color: white; */
+  background-color: rgba(255, 255, 255, 0.849);
 }
 .topper2 {
   width: 40%;
@@ -1053,9 +1081,11 @@
   display: flex;
   box-shadow: 2px 2px 60px rgba(0, 0, 0, 0.2);
   border-radius: 20px;
+  /* background-color: white; */
+  background-color: rgba(255, 255, 255, 0.849);
 }
 .topperImg {
-  background-color: #0061FF;
+	/* background-color:#A2D2FF; */
   width: 50%;
   height: 100%;
   display: flex;
@@ -1064,7 +1094,8 @@
   border-radius: 20px 0px 0px 20px;
 }
 .topperImg2 {
-  background-color: #60EFFF;
+	/* background-color: rgba(255, 255, 255, 0.445); */
+	/* background-color:#A2D2FF; */
   width: 50%;
   height: 100%;
   display: flex;
@@ -1076,12 +1107,14 @@
   width: 80%;
   height: 70%;
   border-radius: 50%;
+  border: 5px solid black
 
 }
 .topperImg2 img {
   width: 80%;
   height: 70%;
   border-radius: 50%;
+  border: 5px solid black
 
 }
 .topperContent {
@@ -1098,17 +1131,38 @@
 .name {
   font-size: 20px;
   font-weight: 600;
+  margin-bottom: 1.5rem;
 }
 .score {
   font-size: 20px;
-  font-weight: 600;
+  font-weight: 500;
 }
 .marks
 {
   font-size: 20px;
   font-weight: 600;
+  padding: .5rem 1rem;
+  border-radius: 20px;
+  background:linear-gradient(60deg,#02c3d8,#0061FF);
+  color: white;
   
 }
 .section-2 h1 {
-  font-size: 1.5rem;
+  font-size: 1.75rem;
+}
+.bgTopper {
+	background:linear-gradient(80deg,#60EFFF,#0061FF);
+	width: 90%;
+	margin-left: auto;
+	margin-right: auto;
+	height: 80vh;
+	border-radius: 20px;
+	box-shadow: 5px 5px 100px rgba(0, 0, 0, 0.3);
+}
+.markFlex {
+	
+	text-align: center;
+	margin-left: auto;
+	margin-right: auto;
+	
 }
