--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -12,7 +12,7 @@
 <body>
 
 
-    <form%- include('./layout/adminheader') %>
+    <%- include('./layout/adminheader') %>
     <section class="dashboard">
     <div class="MenuBar">
         <ul>
