--- a/views/home.ejs
+++ b/views/home.ejs
@@ -109,20 +109,18 @@
 					<h1 class="CalanderEvents">Calendar Events</h1>
 					<div class="calenderMain">
 						<div class="calenderCard">
-							<div class="date">01</div><div class="calenderContent"><p> NEET 2021 Application</p></div>
+							<div class="date">01-Oct</div><div class="calenderContent"><p> NEET 2021 Application</p></div>
 						</div>
 						<div class="calenderCard">
-							<div class="date">02</div><div class="calenderContent"><p>NEET 2021 Examination Date</p></div>
+							<div class="date">02-Oct</div><div class="calenderContent"><p>NEET 2021 Examination Date</p></div>
 						</div>
 						<div class="calenderCard">
-							<div class="date">03</div><div class="calenderContent"><p>NEET 2021 Conselling Date</p></div>
+							<div class="date">03-Oct</div><div class="calenderContent"><p>NEET 2021 Conselling Date</p></div>
 						</div>
 						<div class="calenderCard">
-							<div class="date">04</div><div class="calenderContent"><p>NEET 2021 Correction Date</p></div>
+							<div class="date">04-Oct</div><div class="calenderContent"><p>NEET 2021 Correction Date</p></div>
 						</div>
-						<div class="calenderCard">
-							<div class="date">05</div><div class="calenderContent"><p>NEET 2021 Application Form Last Date</p></div>
-						</div>
+						
 					</div>
 				</div>
 	<!-- </div> -->
