--- a/views/latestupdatesform.ejs
+++ b/views/latestupdatesform.ejs
@@ -10,9 +10,11 @@
     <form action="/latestupdates" method="post">
         
         <!-- <input type="t" name="latestupdates"> -->
-        <textarea name="latestupdates" id="latestupdates" cols="50" rows="40">
+        <textarea name="latestupdates" id="latestupdates" cols="50" rows="20">
             
         </textarea>
+
+        <button>post</button>
     </form>
 </body>
 </html>
